# face_swap_streaming

./: .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  face_filter.py  mediamtx.yml  pyproject.toml  test.yml
app/: config.py  main.py
app/core/: __init__.py  config.py  logger.py  session.py
app/db/: __init__.py  models.py
app/models/: __init__.py  swapper.py
app/routes/: __init__.py  sessions.py  system.py  video.py  webhooks.py
app/schemas/: __init__.py  session.py  video.py
app/services/: __init__.py  monitor.py  process_manager.py  progress_broadcaster.py  session_service.py  stream_service.py  video_job_service.py  worker.py
app/utils/: __init__.py  api_client.py  color_filtering.py  deform.py  frame_reader.py  old_film.py
app/video_swap/: __init__.py  router.py  service.py  utils.py  webhook.py
migrations/: env.py
migrations/versions/: 0001_create_video_jobs.py  0002_add_callback_url.py  0003_add_input_urls.py
tests/: ai_rtmp.py  batch.py  check_mediamtx_api.py  cpungpu.py  face_filter.py  gstreamer.py  multiproc.py  server.py  test.py  tt.py  utils.py
