[project]
name = "face-swap-streaming"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (==2.7.1)",
    "torchvision (==0.22.1)",
    "torchaudio (==2.7.1)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "opencv-python-headless (>=4.12.0.88,<5.0.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-core (>=2.41.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "onnxruntime-gpu (>=1.23.2,<2.0.0)",
    "insightface (>=0.7.3,<0.8.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "boto3 (>=1.42.27,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch_gpu"}
torchvision = {source = "pytorch_gpu"}
torchaudio = {source = "pytorch_gpu"}
